feature: Posicao endpoint
criado o endpoint de posição, sua chamada via botão e seu js respectivo.

--- a/CodeChallengeUber.WebApp/Views/OlhoVivo/Index.cshtml
+++ b/CodeChallengeUber.WebApp/Views/OlhoVivo/Index.cshtml
@@ -7,6 +7,7 @@
         <h1>Olho Vivo API</h1>
     </header>
     <button id="autenticarButton" class="btn btn-primary">Autenticar</button>
+    <button id="getPosicaoButton" class="btn btn-primary">Posição</button>
     <div id="result" class="mt-3"></div>
 </div>
 
